<resources>
    <string name="app_name">DMS</string>

    <!--User  -->
    <string name="odjavi_se">Odjavi se</string>
    <string name="welcome">Dobrodošli u dokument menadžment sistem</string>
    <string name="user_dodaj_korisnika">Dodaj korisnika</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Korisničko ime</string>
    <string name="prompt_password">Sifra</string>
    <string name="action_sign_in">Prijavi se</string>
    <string name="action_sign_in_short">Prijavite se</string>
    <string name="error_invalid_email">Korisničko ime je nevažeće</string>
    <string name="error_invalid_password">Sifra je prekratka</string>
    <string name="error_incorrect_password">Sifra je netacna</string>
    <string name="error_field_required">Ovo polje je obavezno</string>
    <string name="permission_rationale">"Dozvole su obavezne.</string>

    <string name="title_activity_main">DMS</string>

    <string name="user_profil">Moj račun</string>
    <!--Korisnici  -->
    <string name="user_korisnici">Korisnici</string>
    <string name="user_ime">Ime</string>
    <string name="user_prezime">Prezime</string>
    <string name="user_korisnicko_ime">Korisnicko ime</string>
    <string name="user_sifra">Sifra</string>
    <string name="user_sifra_ponovo">Ponovite sifru</string>

    <!--Dokumenti  -->
    <string name="doc_moji_dokumenti">Moji dokumenti</string>
    <string name="doc_dokumenti">Dokumenti</string>
    <string name="doc_ime">Ime dokumenta</string>
    <string name="doc_dodaj_dokument">Dodaj dokument</string>
    <string name="doc_dodaj_file">Dodaj file</string>
    <string name="doc_vlasnik_dokument">Vlasnik dokumenta</string>
    <string name="doc_fajl">Ime fajla</string>

    <!--Roles  -->
    <string name="roles_uloge">Uloge</string>
    <string name="roles_dodaj_ulogu">Dodaj ulogu</string>
    <string name="roles_naziv_uloge">Naziv uloge</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uloga_validation_string">Naziv uloge sadrzi samo slova i mora biti izmedju 3 i 15 karaktera</string>
    <string name="izmjena_uloge_str">Izmijeni Ulogu</string>
    <string name="button_izmijeni_ulogu_str">Izmijeni</string>

    <string name="promijeni_user">Promijeni podatke</string>
</resources>
