<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorWhite"
        android:adjustViewBounds="true"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/users" />

    <TextView
        android:id="@+id/textView_ime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:text="@string/user_ime"
        android:textColor="@color/colorAccent"
        android:padding="3dp"/>

    <TextView
        android:id="@+id/textView_ime_u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_prezime"
        android:layout_toEndOf="@+id/textView_ime"
        android:layout_toRightOf="@+id/textView_ime"
        android:padding="3dp"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textView_prezime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_ime"
        android:layout_toEndOf="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:text="@string/user_prezime"
        android:textColor="@color/colorAccent"
        android:padding="3dp"/>

    <TextView
        android:id="@+id/textView_prezime_u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_ime"
        android:layout_toEndOf="@+id/textView_prezime"
        android:layout_toRightOf="@+id/textView_prezime"
        android:textColor="@color/colorAccent"
        android:padding="3dp"/>

    <TextView
        android:id="@+id/textView_korisnicko_ime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_prezime"
        android:layout_toEndOf="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:textColor="@color/colorAccent"
        android:text="@string/user_korisnicko_ime"
        android:padding="3dp"/>

    <TextView
        android:id="@+id/textView_korisnicko_ime_u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_prezime_u"
        android:layout_toEndOf="@+id/textView_korisnicko_ime"
        android:layout_toRightOf="@+id/textView_korisnicko_ime"
        android:textColor="@color/colorAccent"
        android:padding="3dp"/>

    <TextView
        android:id="@+id/textView_sifra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_korisnicko_ime"
        android:layout_toEndOf="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:padding="3dp"
        android:textColor="@color/colorAccent"
        android:text="@string/user_sifra" />

    <TextView
        android:id="@+id/textView_sifra_u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_korisnicko_ime_u"
        android:layout_toEndOf="@+id/textView_sifra"
        android:layout_toRightOf="@+id/textView_sifra"
        android:textColor="@color/colorAccent"
        android:padding="3dp"/>

</RelativeLayout>