<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ba.unsa.etf.rma.ena.dms_android.activities.AddDokumentActivity"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <ScrollView
        android:id="@+id/add_dokument_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_add_document"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/doc_dodaj_dokument"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorAccent"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/textView_ime_doc_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/doc_ime"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

          <ImageButton
              android:id="@+id/button_add_file"
              style="?android:textAppearanceSmall"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/doc_dodaj_file"
              android:textStyle="bold"
              android:padding="10dp"
              android:src = "@drawable/upload_document"
              android:background="@android:color/transparent"/>

            <Button
                android:id="@+id/button_add_dokument"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/doc_dodaj_dokument"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlue"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
